[workspace]
members = [
    "crates/storage-adapter",
    "crates/storage-adapter/aws-s3",
    "crates/storage-adapter/fs",
    "crates/core",
    "crates/server",
    "crates/cli",
]

[workspace.dependencies]
actix-web = { version = "4.2.1" }
anyhow = { version = "1.0.68" }
async-trait = { version = "0.1.61" }
bytes = { version = "1.3.0" }
futures = { version = "0.3.25" }
hyper = { version = "0.14" }
thiserror = { version = "1.0.38" }
tokio = { version = "1.19.2" }
