[package]
name = "turborepo-server-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "turborepo-server"
path = "./src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.1.0", features = ["derive"] }
env_logger = "0.9.0"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
turborepo-core = { path = "../core" }
turborepo-server = { path = "../server" }
turborepo-aws-s3-storage-adapter = { path = "../storage-adapter/aws-s3" }
turborepo-fs-storage-adapter = { path = "../storage-adapter/fs" }
